--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "mongoose": "^5.11.2",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.6"
   }
 }
