--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "mocha"
+    "test": "nyc --reporter=text mocha --exit"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "mocha": "^8.2.1",
     "mongoose": "^5.11.2",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "nyc": "^15.1.0"
   }
 }
